# simple-qt

./: .gitignore  BUILDING.md  CMakeLists.txt  IMPLEMENTATION.md  README.md  build.bat  build.sh  resources.qrc
_codeql_build_dir/: SimpleBrowser
_codeql_build_dir/SimpleBrowser_autogen/: deps  mocs_compilation.cpp
_codeql_build_dir/SimpleBrowser_autogen/UVLADIE3JM/: moc_browserwindow.cpp.d  moc_tabwidget.cpp.d  moc_webpage.cpp.d  moc_webview.cpp.d
html/: error.html  home.html  settings.html
resources/: homepage.html  resources.qrc
src/: adblocker.cpp  adblocker.h  browser.cpp  browser.h  browserwindow.cpp  browserwindow.h  main.cpp  tabwidget.cpp  tabwidget.h  webpage.cpp  webpage.h  webview.cpp  webview.h
styles/: browser.qss
